# cgap-gene-annotation

./: README.rst  pyproject.toml
cgap_gene_annotation/scripts/: add_annotations.py  create_annotation.py  parse_file.py  update_annotation.py
cgap_gene_annotation/src/: annotations.py  constants.py  cytoband.py  merge.py  parsers.py  schemas.py  utils.py
cgap_gene_annotation/src/schemas/: annotation_removal.json  annotation_source.json  create.json  update.json
cgap_gene_annotation/src/scripts/: write_schemas.py
cgap_gene_annotation/src/tests/: test_annotations.py  test_cytoband.py  test_merge.py  test_parsers.py  test_schemas.py  test_utils.py
cgap_gene_annotation/src/tests/test_files/: Homo_sapiens.GRCh38.101.subset.gtf  dbNSFP4.2_gene.subset  gnomad.v2.1.1.lof_metrics.by_gene.subset.txt  hgnc_tsv.non_alt_loci.subset.txt
